<resources>
    <string name="app_name">Weatherly</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string-array name="units_array">
        <item>imperial</item>
        <item>metric</item>
        <item>standard</item>
    </string-array>
    <string-array name="wind_units_array">
        <item>meter/sec</item>
        <item>mile/hour</item>
    </string-array>
    <string-array name="language_array">
        <item>Arabic</item>
        <item>English</item>
    </string-array>
    <string name="rain">Rain</string>
    <string name="temp">Temperature</string>
    <string name="wind">Wind</string>
    <string name="fog">Fog/Mist/Haze</string>
    <string name="snow">Snow</string>
    <string name="cloudiness">Cloudiness</string>
    <string name="thunderstorm">Thunderstorm</string>
    <string name="empty">Alert type</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="weekend">Kindly choose at least one day</string>
    <string name="alertType">Kindly choose Alert type</string>
    <string name="time">Kindly choose from and to time</string>
    <string name="threshold">kindly enter threshold value</string>
    <string name="alarmOff">Alarm OFF</string>
    <string name="alarmOn">Alarm ON</string>
    <string name="checkEvent">Check Event At</string>
    <string name="hour24">24 Hour</string>
    <string name="hour48">48 Hour</string>
    <string name="hour72">72 Hour</string>
    <string name="hello_world">Hello Square World!</string>
    <string name="add_alarm">Add Alarm</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="add">Add</string>
    <string name="day_forecast">24 Hour Forecast</string>
    <string name="week_forecast">7 Day Forecast</string>
    <string name="favorite">Favorites</string>
    <string name="settings">Settings</string>
    <string name="temperature_unit">Temperature Units :</string>
    <string name="language">Language :</string>
    <string name="weather_alert">Weather Alerts</string>
    <string-array name="alertTypes">
        <item>@string/empty</item>
        <item>@string/rain</item>
        <item>@string/temp</item>
        <item>@string/wind</item>
        <item>@string/fog</item>
        <item>@string/snow</item>
        <item>@string/cloudiness</item>
        <item>@string/thunderstorm</item>
    </string-array>

</resources>