<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/card_view_layout"
    tools:context=".view.SettingsFragment">

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/settings"
        android:textAlignment="center"
        android:textColor="@color/neon_green"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Textunits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/temperature_unit"
        android:textAlignment="textStart"
        android:textColor="@color/neon_green"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header" />

    <Spinner
        android:id="@+id/units_spinner"
        android:layout_width="75dp"
        android:layout_height="25dp"
        app:layout_constraintBottom_toBottomOf="@+id/Textunits"
        app:layout_constraintTop_toTopOf="@+id/Textunits"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="4dp"
        android:background="@drawable/favorite_item_layout"
        android:textColor="@color/neon_green"
        android:popupBackground="@color/ocean_blue"
        />

    <TextView
        android:id="@+id/text_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/language"
        android:textAlignment="textStart"
        android:textColor="@color/neon_green"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Textunits" />

    <Spinner
        android:id="@+id/language_spinner"
        android:layout_width="75dp"
        android:layout_height="25dp"
        app:layout_constraintBottom_toBottomOf="@+id/text_language"
        app:layout_constraintTop_toTopOf="@+id/text_language"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="4dp"
        android:background="@drawable/favorite_item_layout"
        android:textColor="@color/neon_green"
        android:popupBackground="@color/ocean_blue"

        />

</androidx.constraintlayout.widget.ConstraintLayout>