<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/card_view_layout"
    tools:context=".view.WeatherFragment">

    <TextView
        android:id="@+id/alertsHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/weather_alert"
        android:textAlignment="center"
        android:textColor="	#ccff66"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_fav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="120dp"
        android:background="@drawable/card_view_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alarmCard"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="85dp"
        android:backgroundTint="@color/neon_green"
        android:src="@drawable/weather_icon"
        />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/alertsHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/alarmCard"
        app:layout_constraintBottom_toTopOf="@id/recycler_fav"
        app:cardCornerRadius="0dp"
        app:cardBackgroundColor="#00000000"
        >


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constaintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/fab_layot"

            >

            <TextView
                android:id="@+id/alarmStateTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alarmOff"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.081"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.022"
                android:fontFamily="@font/montserrat"
                android:textColor="@color/white"
                android:shadowColor="@color/white"
                />

            <RadioGroup
                android:id="@+id/groupRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.043"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView2"
                app:layout_constraintVertical_bias="0.045">


                <RadioButton
                    android:id="@+id/radioButton24"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/hour24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:layout_editor_absoluteY="177dp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/montserrat"
                    android:buttonTint="@color/neon_green"/>

                <RadioButton
                    android:id="@+id/radioButton48"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hour48"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:layout_editor_absoluteY="255dp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/montserrat"
                    android:buttonTint="@color/neon_green"/>

                <RadioButton
                    android:id="@+id/radioButton72"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hour72"
                    tools:layout_editor_absoluteX="25dp"
                    tools:layout_editor_absoluteY="334dp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/montserrat"
                    android:buttonTint="@color/neon_green"/>

            </RadioGroup>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/onOffSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.91"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.051"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/alarmStateTV"
                app:layout_constraintVertical_bias="0.2"
                android:background="#00000000">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="@color/ocean_blue"
                    >

                    <TextView
                        android:id="@+id/checkEventTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/checkEvent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.049"
                        android:fontFamily="@font/montserrat"
                        android:textColor="@color/white"
                        android:textSize="11sp"
                        />

                    <TextView
                        android:id="@+id/alarmTimeTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="--:--"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/checkEventTV"
                        android:textColor="@color/white"/>

                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>